--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,136 @@
     font-family: 'DM Sans', sans-serif;
     font-weight: 400;
 }
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    width: 100vw;
+    min-height: 100vh;
+    background-color: var(--colour-cream);
+
+    display: grid;
+    grid-template-rows: 1fr min-content;
+}
+
+main {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+hr {
+    border: 1px solid var(--colour-cream);
+}
+
+
+
+
+.balace-box {
+    width: var(--content-width);
+    padding: 1rem;
+    border-radius: 10px;
+    background-color: var(--colour-soft-red);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.my-balance h2{
+    color: var(--colour-cream);
+    font-size: 0.6rem;
+    font-weight: 400;
+}
+
+.my-balance p {
+    color: var(--colour-very-pale-orange);
+    font-weight: 700;
+}
+
+
+
+
+.spending-box {
+    width: var(--content-width);
+    height: 60%;
+    padding: 1rem;
+    background-color: var(--colour-very-pale-orange);
+    color: var(--colour-dark-brown);
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.total-this-month {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.total-this-month-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.total-this-month-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.total-this-month h2 {
+    font-size: 0.6rem;
+    font-weight: 400;
+    color: var(--colour-medium-brown);
+}
+
+.total-this-month p {
+    font-weight: 700;
+}
+
+.total-this-month-amount {
+    font-size: 1.5rem;
+}
+
+.total-this-month-percentage {
+    font-size: 0.7rem;
+}
+
+
+
+
+.chart {
+    width: 100%;
+    height: 65%;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: 1fr min-content;
+    justify-items: center;
+    align-items: flex-end;
+    gap: 0.5rem;
+}
+
+.chart p {
+    color: var(--colour-medium-brown);
+}
+
+.day {
+    background-color: var(--colour-soft-red);
+    width: 100%;
+    border-radius: 5px;
+}
