--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     --colour-very-pale-orange: hsl(33, 100%, 98%);
 
     --content-width: 90%;
+    --border-radius: 10px;
 
     font-size: 18px;
     font-family: 'DM Sans', sans-serif;
@@ -54,7 +55,7 @@ hr {
 .balace-box {
     width: var(--content-width);
     padding: 1rem;
-    border-radius: 10px;
+    border-radius: var(--border-radius);
     background-color: var(--colour-soft-red);
 
     display: flex;
@@ -82,7 +83,7 @@ hr {
     padding: 1rem;
     background-color: var(--colour-very-pale-orange);
     color: var(--colour-dark-brown);
-    border-radius: 10px;
+    border-radius: var(--border-radius);
 
     display: flex;
     flex-direction: column;
